--- a/views/index.erb
+++ b/views/index.erb
@@ -1,15 +1,15 @@
 <style>
-img {
-	border: dashed red;
-}
+img { border: red dashed; }
 </style>
-<img src='http://bit.ly/1eze8aE'> <br>
 
-<% if @name %>
-	<h1> My name is <%= @name %> </h1>
-<% end %>
-<form action="/named-cat" method="get">
+<h1> My name is <%= @name %> </h1>
+
+<% if @name.nil? || @name == "" %>
+<form action="/named-cat" method="post">
   <input type="text" name="name">
   <input type="submit" value="Submit">
 </form>
+<% end %>
+<br>
+<img src='http://bit.ly/1eze8aE'>
 
